# vapor

./: .gitignore  Cargo.toml  README.md
Vapor.app/Contents/: Info.plist
Vapor.app/Contents/MacOS/: vapor
Vapor.app/Contents/Resources/: AppIcon.icns
src/: main.rs  metrics.rs  statusbar.rs  temperature.rs
