[package]
name = "stamon"
version = "0.1.0"
edition = "2024"

[dependencies]
tray-icon = "0.19"
winit = "0.30"
muda = "0.15"

[profile.release]
opt-level = "s"      # optimise for size, not speed (computation is trivial)
lto = true           # whole-program dead-code elimination across all crates
codegen-units = 1    # required for full LTO; also improves inlining
strip = "symbols"    # drop debug symbols from the binary
panic = "abort"      # remove unwinding machinery (~100 KB saved)

